erDiagram
  DIM_USUARIO ||--o{ FACT_ABORDAJE : usa
  DIM_TIEMPO ||--o{ FACT_ABORDAJE : ocurre
  DIM_ZONA ||--o{ FACT_ABORDAJE : ocurre_en
  DIM_MODO ||--o{ FACT_ABORDAJE : modo
  DIM_ESTACION_PARADA ||--o{ FACT_ABORDAJE : punto
  DIM_RUTA ||--o{ FACT_ABORDAJE : ruta

  DIM_USUARIO ||--o{ FACT_VIAJE_METRORIEL : usa
  DIM_TIEMPO ||--o{ FACT_VIAJE_METRORIEL : salida
  DIM_ESTACION_PARADA ||--o{ FACT_VIAJE_METRORIEL : origen
  DIM_ESTACION_PARADA ||--o{ FACT_VIAJE_METRORIEL : destino
  DIM_MODO ||--o{ FACT_VIAJE_METRORIEL : modo
